<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableRow>

        <TextView
            android:id="@+id/service_name"
            android:text="@string/service_name"
            android:layout_width="@dimen/cell_min_width"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/req_doc"
            android:text="@string/req_doc"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/steps"
            android:text="@string/process"
            android:textAlignment="center"
            android:layout_width="@dimen/cell_max_width"
            android:layout_height="wrap_content"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/req_time"
            android:text="@string/req_time"
            android:textAlignment="center"
            android:layout_width="@dimen/cell_min_width"
            android:layout_height="wrap_content"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/req_fare"
            android:text="@string/service_fare"
            android:textAlignment="center"
            android:layout_width="@dimen/cell_min_width"
            android:layout_height="wrap_content"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/res_office"
            android:text="@string/res_dept"
            android:textAlignment="center"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/res_person"
            android:text="@string/res_person"
            android:textAlignment="center"
            android:background="@color/app_header_bg"
            android:textColor="@color/whilte_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="1dp"
            android:textSize="30dp"/>



    </TableRow>

</TableLayout>